@@ -7,9 +7,9 @@
     When revising a translation, copy the CVS Revision number from the
     original source file.  !-->
 
-<title>LilyPond - op Microsoft Windows</title>
+<title>LilyPond onder Cygwin</title>
 
-<h1>LilyPond op Microsoft Windows</h1>
+<h1>LilyPond onder Cygwin</h1>
 
 
 <a name="installing"></a>
