@@ -1,3 +1,7 @@
+2005-12-18  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* {site,fr,nl}/install/cygwin.html: move from windows.html
+
 2005-12-15  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site/news.ihtml:
